# Prog_Course_Project

./: .travis.yml  CMakeLists.txt  README.md  text_rus.txt
dictionary/: dictionary.txt
src/: CMakeLists.txt  bstree.c  bstree.h  dictionary.c  dictionary.h  main.c  parsing.c  parsing.h  register.c  register.h  token_replacement.c  token_replacement.h
test/: CMakeLists.txt  bstree_test.c  main.c  parsing_test.c  register_test.c  token_replacement_test.c
test/test_file/: text_eng.txt  text_rus.txt
